add body content to index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     The body is the entire viewable area of the webpage.
     For example we can see text, links, images, and media.
     -->
+    <h1>Exceptional</h1>
+    <h2>Realty Group</h2>
+
+    <p>Hello World.</p>
+    <p>Hello Moon.</p>
+
+
   </body>
 
 
