--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
+    <img src="images/intro-pic.jpg" alt="A beautiful living room"
+    title="Welcome to Exceptional Realty">
+
+
+    <!--
+    'foldername/' = access that folder.
+    'filename' = use that file on the current directory
+    "../" = leaves the current directory and moves one directory up
+    -->
+
     <p>Hello World.</p>
     <p>Hello Moon.</p>
 
