--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,14 @@
 
     <h3>Contact</h3>
 
+    <!-- map -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7578.524670421139!2d-73.99989756131205!3d40.696832447646585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights%2C+Brooklyn%2C+NY!5e0!3m2!1sen!2sus!4v1530135319182"
+    width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+    <!--contact form-->
+
+
+
   </body>
 
 
