--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,19 @@
     width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
     <!--contact form-->
+    <form action="#" method="post">
+      <label for="fullname">Name</label>
+      <input type="text" id="fullname" name="fullname" value="your name" required>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" value="your email" required>
+      <label for="phone">Phone</label>
+      <input type="tel" id="phone" name="phone" value="your phone optional">
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="10" cols="80"></textarea>
+      <input type="submit" value="send">
 
+
+    </form>
 
 
   </body>
