--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     <p>Hello World.</p>
     <p>Hello Moon.</p>
 
+    <!-- promo videp -->
+
+    <video controls>
+      <source src="videos/real-estate.mp4" type="video/mp4">
+      <source src="videos/real-estate.ogv" type="video/ogg">
+      Your browwer does not support HTML video. <a href="http://browsehappy.com">Please upgrade your browser</a>
+    </video>
+
 
   </body>
 
