--- a/index.html
+++ b/index.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--this is a comment. -->
-
-    <!--
-    The head section contains info for search engines and the browser.
-    It is not seen by site visitors.
-    -->
 
     <meta charset="UTF-8">
     <title> Exceptional Realty Group - Luxury Homes - About </title>
   </head>
 
   <body>
-    <!--
-    The body is the entire viewable area of the webpage.
-    For example we can see text, links, images, and media.
-    -->
+    <header>
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
-
+        <nav>
     <!--links-->
-    <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a>
-    <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target= "_blank">H.U.D.</a>
+          <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a>
+          <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target= "_blank">H.U.D.</a>
+        </nav>
+    </header>
 
-    <img src="images/intro-pic.jpg" alt="A beautiful living room"
-    title="Welcome to Exceptional Realty">
+    <section id="featured-property">
+      <figure>
+        <img src="images/intro-pic.jpg" alt="A beautiful living room"
+        title="Welcome to Exceptional Realty">
+        <figcaption>345 Carl Street Apt 12, Carrol Road, Brookly, NY - Photo by Denise Richards.</figcaption>
+      </figure>
 
-    <!--
-    'foldername/' = access that folder.
-    'filename' = use that file on the current directory
-    "../" = leaves the current directory and moves one directory up
-    -->
+      <p>Hello World.</p>
+      <p>Hello Moon.</p>
+    </section>
 
-    <p>Hello World.</p>
-    <p>Hello Moon.</p>
 
     <!-- promo videp -->
+    <section id="promotional">
+      <figure>
+        <video controls>
+          <source src="videos/real-estate.mp4" type="video/mp4">
+          <source src="videos/real-estate.ogv" type="video/ogg">
+          Your browwer does not support HTML video. <a href="http://browsehappy.com">Please upgrade your browser</a>
+        </video>
+        <figcaption>Exceptional Realty Group Promotional Video - Source: Archive.org</figcaption>
+      </figure>
 
-    <video controls>
-      <source src="videos/real-estate.mp4" type="video/mp4">
-      <source src="videos/real-estate.ogv" type="video/ogg">
-      Your browwer does not support HTML video. <a href="http://browsehappy.com">Please upgrade your browser</a>
-    </video>
+    </section>
+
+<footer>
+  &copy; 2018 Exceptional Realty. All rights reserved.
+</footer>
 
 
   </body>
